# gencore

./: COPYING  COPYING.LIBGENCORE  Changelog  Makefile.am  README  configure.ac  gencore.service  gencore.socket  gencore.spec.in  gencore@.service  libgencore.pc.in
doc/: Makefile.am  gencore.1  gencore.3
src/: Makefile.am  client.c  coredump.c  coredump.h  elf-compat.h  elf.c  elf32.c  elf64.c  gencore.h  proc.c
